--- a/blog/css/custom.css
+++ b/blog/css/custom.css
@@ -4,23 +4,27 @@
                               BULLETS
 ================================================================= */ 
 /* VERSION 1 */
-.bullets{
-  margin-top: -18px;  
+.bullets{  
+  margin-top: -1em;  
+  padding-bottom:1.5em;
 }
 .bullets ul { 
   margin-left: 0em;
   line-height: 1.15;
-  padding-top: 8px;}
+  padding-top: 8px;
+}
   
+
+.bullets ul li { 
+    margin-left: 1em;
+    padding:0; 
+    margin-bottom: -0.5em;  
+    }
 
 .bullets ul li p { 
   margin-left: 0em;
   line-height: 1.55;
   text-indent:0;}
-
-.bullets ul li { 
-    margin-left: 12px;
-    line-height: 1.15; }
 
 
 /* VERSION 2 */
